k8s/frontpage/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crafteur-frontpage
  namespace: default
  labels:
    app: crafteur-frontpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crafteur-frontpage
  template:
    metadata:
      labels:
        app: crafteur-frontpage
    spec:
      containers:
      - name: web
        image: ghcr.io/zipleix/crafteur-frontpage:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: crafteur-frontpage-svc
  namespace: default
  labels:
    app: crafteur-frontpage
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: crafteur-frontpage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crafteur-frontpage-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: 82.67.198.156
spec:
  ingressClassName: traefik
  rules:
  - host: crafteur.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crafteur-frontpage-svc
            port:
              number: 3000
  tls:
  - hosts:
    - crafteur.fr
    secretName: crafteur-baptiste-zip-tls
